# unvme-cli

./: README.md  meson.build  meson_options.txt  unvme_msgq_client.py
examples/fio/: fio_mps_sweep.sh
lib/: libunvmed-cmds.c  libunvmed-private.h  libunvmed.c  libunvmed.h  meson.build  meson_options.txt
samples/: Makefile  nvme-queue-info.c
src/: meson.build  unvme.c  unvme.h  unvmed-cmds.c  unvmed-print.c  unvmed.c
src/app/: meson.build
src/app/fio/: libunvmed-engine.c  meson.build
src/app/standalone/: meson.build  standalone.c
